# naitou_clone

./: .gitignore  .luacheckrc  Cargo.toml  README.md  verify-logs
lua/: mesen.lua  naitou.lua  trace.lua  util.lua
src/: ai.rs  book.rs  effect.rs  emu.rs  lib.rs  log.rs  my_move.rs  position.rs  prelude.rs  pretty.rs  price.rs  record.rs  sfen.rs  usi.rs  usi_random.rs  util.rs  your_move.rs  your_player.rs
util/: book
